--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 .container {
     background-color: rgb(21, 20, 19);
     overflow: hidden;
-    height: 100vh;
+    height: 100dvh;
     position: relative;
 }
 
 .kids {
-    height: 100vh;
+    height: 100dvh;
     position: absolute;
     inset: 0;
     display: flex;
