--- a/src/index.css
+++ b/src/index.css
@@ -25,9 +25,9 @@ a:hover {
 
 body {
   margin: 0;
-  place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  overflow: hidden;
+  height: 100dvh;
 }
 
 h1 {
